# label-image

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  clean.sh  create_yolo_env.sh  vcpkg.json
src/: main.cpp  qml.qrc
src/label-image/views/: LabelView.qml  MainBody.qml  MainContent.qml  MainWindow.qml  NoneProject.qml  PredictView.qml  TrainView.qml  TransModelView.qml  WorkView.qml  editProjectDialog.qml  projects_view.qml
src/models/: app_config.cpp  app_config.h
src/viewmodels/: editprojectdialogviewmodel.cpp  editprojectdialogviewmodel.h  mainviewmodel.cpp  mainviewmodel.h
